# blog-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  audit.py  classifier.py  cloudflare_client.py  config.py  github_client.py  gitops.py  main.py  promote.py  state.py
app/static/: styles.css
app/templates/: dashboard.html
app/templates/partials/: action_result.html  audit_log.html  board.html
systemd/: blog-pipeline.service
tunnel/: cloudflared.yml.example
